[package]
name = "local-socket"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Simple client/server wrapper for a tokio unix domain socket"
repository = "https://github.com/retrohacker/local-socket"

[dependencies]
futures = "0.3.30"
message-sink = "0.1.0"
tokio = { version = "1.37.0", features = ["net"] }
tokio-util = { version = "0.7.10", features = ["compat"] }

[dev-dependencies]
futures-util = { version = "0.3.30" }
temp-dir = "0.1.13"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
